salesforce-package/force-app/main/default/objects/User/fields/TalkCRM_Phone_Verified__c.field-meta.xml
<CustomField>
    <fullName>TalkCRM_Phone_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this user has verified their phone number with TalkCRM.</description>
    <inlineHelpText>Set to true when the user completes phone verification.</inlineHelpText>
    <label>TalkCRM Phone Verified</label>
    <type>Checkbox</type>
</CustomField>