salesforce-package/force-app/main/default/objects/User/fields/TalkCRM_User_Id__c.field-meta.xml
<CustomField>
    <fullName>TalkCRM_User_Id__c</fullName>
    <description>The TalkCRM backend user ID for this Salesforce user.</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto-populated after OAuth connection to TalkCRM.</inlineHelpText>
    <label>TalkCRM User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>