salesforce-package/force-app/main/default/objects/User/fields/TalkCRM_Verified_Phone__c.field-meta.xml
<CustomField>
    <fullName>TalkCRM_Verified_Phone__c</fullName>
    <description>The phone number this user has verified with TalkCRM.</description>
    <inlineHelpText>The verified phone number for TalkCRM voice/text access.</inlineHelpText>
    <label>TalkCRM Verified Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>